--- a/tex/library.bib
+++ b/tex/library.bib
@@ -2,18 +2,14 @@
 @misc{u.s._environmental_protection_agency_oswer_2015,
   title = {{{OSWER Technical Guide}} for {{Assessing}} and {{Mitigating}} the {{Vapor Intrusion Pathway From Subsurface Vapor Sources To Indoor Air}}},
   date = {2015},
-  keywords = {EPA,Mitigation,OSWER,US,Vapor intrusion},
-  author = {{U.S. Environmental Protection Agency}},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\NF8QTT3E\\U.S. Environmental Protection Agency - 2015 - OSWER Technical Guide for Assessing and Mitigating the Vapor Intrusion Pathway From Subsur.pdf}
+  author = {{U.S. Environmental Protection Agency}}
 }
 
 @misc{schumacher_fluctuation_2012,
   title = {Fluctuation of {{Indoor Radon}} and {{VOC Concentrations Due}} to {{Seasonal Variations}}},
   publisher = {{U.S Environmental Protection Agency}},
   date = {2012-07-11},
-  keywords = {EPA,Vapor intrusion,Indianapolis duplex,Radon,Seasonal variation,VOC},
-  author = {Schumacher, B. and Zimmerman, J. H. and Truesdale, R. and Lutes, Christopher C.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\ABS6CUQN\\Schumacher et al. - 2012 - Fluctuation of Indoor Radon and VOC Concentrations.PDF}
+  author = {Schumacher, B. and Zimmerman, J. H. and Truesdale, R. and Lutes, Christopher C.}
 }
 
 @thesis{holton_evaluation_2015,
@@ -22,9 +18,7 @@
   institution = {{Arizona State University}},
   type = {PhD Thesis},
   date = {2015},
-  keywords = {Vapor intrusion,Assessment methods,Controlled pressure method,Hill AFB},
-  author = {Holton, Chase Weston},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\4B8ZPHK9\\Holton - 2015 - Evaluation of Vapor Intrusion Pathway Assessment Through Long-Term Monitoring Studies.pdf}
+  author = {Holton, Chase Weston}
 }
 
 @thesis{guo_vapor_2015,
@@ -33,9 +27,7 @@
   institution = {{Arizona State University}},
   type = {PhD Thesis},
   date = {2015},
-  keywords = {Hill AFB},
-  author = {Guo, Yuanming},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\ITB8ABHK\\Guo - 2015 - Vapor Intrusion at a Site with an Alternative Pathway and a Fluctuating Groundwater Table.pdf}
+  author = {Guo, Yuanming}
 }
 
 @misc{abreu_conceptual_2012,
@@ -43,18 +35,14 @@
   title = {Conceptual {{Model Scenarios}} for the {{Vapor Intrusion Pathway}}},
   publisher = {{U.S. Environmental Protection Agency}},
   date = {2012},
-  keywords = {EPA,Vapor intrusion,Model},
-  author = {Abreu, Lilian D V and Schuver, Henry},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\MMBV2L9E\\vi-cms-v11final-2-24-2012.pdf}
+  author = {Abreu, Lilian D V and Schuver, Henry}
 }
 
 @misc{u.s._environmental_protection_agency_userss_2004,
   title = {Users's {{Guide For Evaluating Subsurface Vapor Intrusion Into Buildings}}},
   publisher = {{U.S. Environmental Protection Agency}},
   date = {2004},
-  keywords = {Vapor intrusion,Model,van Genuchten,van Genuchten parameters},
-  author = {{U.S. Environmental Protection Agency}},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\QZ8PQQC6\\2004_0222_3phase_users_guide.pdf}
+  author = {{U.S. Environmental Protection Agency}}
 }
 
 @misc{u.s._environmental_protection_agency_assessment_2015,
@@ -62,9 +50,7 @@
   title = {Assessment of {{Mitigation Systems}} on {{Vapor Intrusion}}: {{Temporal Trends}}, {{Attenuation Factors}}, and {{Contaminant Migration Routes}} under {{Mitigated And Non}}-Mitigated {{Conditions}}},
   publisher = {{U.S. Environmental Protection Agency}},
   date = {2015},
-  keywords = {Future work,EPA,Mitigation,Vapor intrusion,Indianapolis duplex,Data,Site description,Spatial variability,Temporal variability},
-  author = {{U.S. Environmental Protection Agency}},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\9Q3BGP3W\\VI-EPA-600-R-13-241.pdf}
+  author = {{U.S. Environmental Protection Agency}}
 }
 
 @misc{johnson_integrated_2016,
@@ -72,18 +58,14 @@
   title = {Integrated {{Field}}-{{Scale}}, {{Lab}}-{{Scale}}, and {{Modeling Studies}} for {{Improving Our Ability}} to {{Assess}} the {{Groundwater}} to {{Indoor Air Pathway}} at {{Chlorinated Solvent}}-{{Impacted Groundwater Sites}}},
   publisher = {{U.S. Department of Defense}},
   date = {2016},
-  keywords = {Vapor intrusion,Hill AFB,Spatial variability,Temporal variability,Indoor sources,Vapor intrusion factors},
-  author = {Johnson, Paul C. and Holton, Chase Weston and Guo, Yuanming and Dahlen, Paul and Luo, E. Hong and Gorder, Kyle and Dettenmaier, Erik and Hinchee, Robert E.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\IPR6TN3S\\Final Report V2 ER-1686 July 2016.pdf}
+  author = {Johnson, Paul C. and Holton, Chase Weston and Guo, Yuanming and Dahlen, Paul and Luo, E. Hong and Gorder, Kyle and Dettenmaier, Erik and Hinchee, Robert E.}
 }
 
 @report{macgregor_environmental_2011,
   title = {Environmental {{Technology Verification Report Verification}} of {{Building Pressure Control}} as {{Conducted}} by {{GSI Environmental}}, {{Inc}}. for the {{Assessment}} of {{Vapor Intrusion}}: {{Environmental Technology Verification Report}}},
   date = {2011-12},
   pages = {148},
-  keywords = {EPA,Vapor intrusion,Hill AFB,Data},
-  author = {MacGregor, Ian and {Prier, Mary} and {Rhoda, Dale} and {Dindal, Amy}},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\R49TJUGC\\MacGregor et al. - 2011 - Environmental Technology Verification Report Verif.PDF}
+  author = {MacGregor, Ian and {Prier, Mary} and {Rhoda, Dale} and {Dindal, Amy}}
 }
 
 @inproceedings{riis_vapor_2010,
@@ -92,17 +74,14 @@
   isbn = {978-0-9819730-2-9},
   booktitle = {Seventh {{International Conference}} on {{Remediation}} of {{Chlorinated}} and {{Recalcitrant Compounds}}},
   date = {2010-05-24},
-  author = {Riis, Charlotte E. and Christensen, Anders G. and Hansen, Maria H. and Husum, Henrik and Terkelsen, Mads},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\CQG9PIRG\\Riis et al. - Vapor intrusion through sewer systems migration p.pdf}
+  author = {Riis, Charlotte E. and Christensen, Anders G. and Hansen, Maria H. and Husum, Henrik and Terkelsen, Mads}
 }
 
 @report{m._d._koontz_estimation_1995,
   title = {Estimation of {{Distributions}} for {{Residential Air Exchange Rates}}},
   institution = {{U.S. Environmental Protection Agency}},
   date = {1995-03},
-  keywords = {EPA,Data,Air exchange rate,Database,To read},
-  author = {{M. D. Koontz} and {H. E. Rector}},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\5C4F3NYN\\M. D. Koontz and H. E. Rector - 1995 - Estimation of Distributions for Residential Air Ex.PDF}
+  author = {{M. D. Koontz} and {H. E. Rector}}
 }
 
 @article{richards_capillary_1931,
@@ -114,8 +93,7 @@
   journaltitle = {Physics},
   date = {1931-11-01},
   pages = {318-333},
-  author = {Richards, L. A.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\9PZFEPYS\\1.html}
+  author = {Richards, L. A.}
 }
 
 @article{rackes_time-averaged_2016,
@@ -130,9 +108,7 @@
   journaltitle = {Indoor Air},
   date = {2016-08-01},
   pages = {642-659},
-  keywords = {Vapor intrusion,Air exchange rate,Monte Carlo,Chemical sources,Commercial buildings,Emissions model,Risk assessment,Ventilation rate},
-  author = {Rackes, A. and Waring, M. S.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\8JGN2ZLE\\Rackes and Waring - 2016 - Do time-averaged, whole-building, effective volati.pdf;C:\\Users\\jstroem\\Zotero\\storage\\7HESQW96\\abstract\;jsessionid=7BA603E2EF413C661269470536676AD1.html}
+  author = {Rackes, A. and Waring, M. S.}
 }
 
 @article{hosangadi_high-frequency_2017,
@@ -146,9 +122,7 @@
   journaltitle = {Remediation},
   date = {2017-03-01},
   pages = {9-25},
-  keywords = {Vapor intrusion,Data,Temporal variability,North Island NAS,San Diego Bay,Stack effect,Tide},
-  author = {Hosangadi, Vitthal and Shaver, Brandon and Hartman, Blayne and Pound, Michael and Kram, Mark L. and Frescura, Cliff},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\8SLMHIHW\\Hosangadi et al. - 2017 - High-Frequency Continuous Monitoring to Track Vapo.pdf;C:\\Users\\jstroem\\Zotero\\storage\\L3UJKXU8\\abstract.html}
+  author = {Hosangadi, Vitthal and Shaver, Brandon and Hartman, Blayne and Pound, Michael and Kram, Mark L. and Frescura, Cliff}
 }
 
 @article{mchugh_evidence_2017,
@@ -160,9 +134,7 @@
   journaltitle = {Science of The Total Environment},
   date = {2017-11-15},
   pages = {772-779},
-  keywords = {Vapor intrusion,Indianapolis duplex,Preferential pathway,Sewer,Utility tunnel},
-  author = {McHugh, Thomas and Beckley, Lila and Sullivan, Terry and Lutes, Chris and Truesdale, Robert and Uppencamp, Rob and Cosky, Brian and Zimmerman, John and Schumacher, Brian},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\MIKT576N\\McHugh et al. - 2017 - Evidence of a sewer vapor transport pathway at the.pdf;C:\\Users\\jstroem\\Zotero\\storage\\VTM6ESK9\\McHugh et al. - 2017 - Evidence of a sewer vapor transport pathway at the USEPA vapor intrusion research duplex.pdf;C:\\Users\\jstroem\\Zotero\\storage\\URVK5TVS\\S0048969717309737.html}
+  author = {McHugh, Thomas and Beckley, Lila and Sullivan, Terry and Lutes, Chris and Truesdale, Robert and Uppencamp, Rob and Cosky, Brian and Zimmerman, John and Schumacher, Brian}
 }
 
 @article{yao_investigating_2017,
@@ -175,9 +147,7 @@
   journaltitle = {J. Environ. Qual.},
   date = {2017-07/0001-08},
   pages = {776-784},
-  keywords = {Vapor intrusion,van Genuchten,Vapor intrusion factors,Soil,Soil moisture},
-  author = {Yao, Yijun and Wang, Yue and Zhong, Zhong and Tang, Mengling and Suuberg, Eric M.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\X6FUQDT9\\Yao et al. - 2017 - Investigating the Role of Soil Texture in Vapor In.pdf;C:\\Users\\jstroem\\Zotero\\storage\\Z27SITDF\\Yao et al. - 2017 - Investigating the Role of Soil Texture in Vapor Intrusion from Groundwater Sources.pdf;C:\\Users\\jstroem\\Zotero\\storage\\GXQC6WTE\\776.html}
+  author = {Yao, Yijun and Wang, Yue and Zhong, Zhong and Tang, Mengling and Suuberg, Eric M.}
 }
 
 @article{yao_three-dimensional_2017,
@@ -190,9 +160,7 @@
   journaltitle = {J. Environ. Qual.},
   date = {2017-11/0001-12},
   pages = {1424-1433},
-  keywords = {Vapor intrusion,Model,Preferential pathway,Land drain},
-  author = {Yao, Yijun and Mao, Fang and Ma, Shuaishuai and Yao, Yihong and Suuberg, Eric M. and Tang, Xianjin},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\5GBG5S2U\\Yao et al. - 2017 - Investigating the Role of Soil Texture in Vapor Intrusion from Groundwater Sources.pdf;C:\\Users\\jstroem\\Zotero\\storage\\M6KJMGAH\\Yao et al. - 2017 - Three-Dimensional Simulation of Land Drains as a P.pdf;C:\\Users\\jstroem\\Zotero\\storage\\WV2VE4B9\\Yao et al. - 2017 - Three-Dimensional Simulation of Land Drains as a Preferential Pathway for Vapor Intrusion into Buildings.pdf;C:\\Users\\jstroem\\Zotero\\storage\\5NJNV3WB\\1424.html}
+  author = {Yao, Yijun and Mao, Fang and Ma, Shuaishuai and Yao, Yihong and Suuberg, Eric M. and Tang, Xianjin}
 }
 
 @article{pennell_field_2016,
@@ -205,9 +173,7 @@
   journaltitle = {Science of The Total Environment},
   date = {2016-06-15},
   pages = {291-301},
-  keywords = {Vapor intrusion,Model,Multiple lines of evidence,Soil gas},
-  author = {Pennell, Kelly G. and Scammell, Madeleine K. and McClean, Michael D. and Suuberg, Eric M. and Moradi, Ali and Roghani, Mohammadyousef and Ames, Jennifer and Friguglietti, Leigh and Indeglia, Paul A. and Shen, Rui and Yao, Yijun and Heiger-Bernays, Wendy J.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\3M5YQ2EA\\Pennell et al. - 2016 - Field data and numerical modeling A multiple lines of evidence approach for assessing vapor intrusion exposure r.pdf;C:\\Users\\jstroem\\Zotero\\storage\\JYMH3Z6H\\Pennell et al. - 2016 - Field data and numerical modeling A multiple line.pdf;C:\\Users\\jstroem\\Zotero\\storage\\DQ5KVJR6\\S0048969716303965.html}
+  author = {Pennell, Kelly G. and Scammell, Madeleine K. and McClean, Michael D. and Suuberg, Eric M. and Moradi, Ali and Roghani, Mohammadyousef and Ames, Jennifer and Friguglietti, Leigh and Indeglia, Paul A. and Shen, Rui and Yao, Yijun and Heiger-Bernays, Wendy J.}
 }
 
 @article{verginelli_excel-based_2016,
@@ -221,9 +187,7 @@
   journaltitle = {Groundwater Monit R},
   date = {2016-05-01},
   pages = {94-100},
-  keywords = {Vapor intrusion,Model,Two dimensional},
-  author = {Verginelli, Iason and Yao, Yijun and Suuberg, Eric M.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\6EMRT86Z\\Verginelli et al. - 2016 - An Excel®-Based Visualization Tool of Two-Dimensio.pdf;C:\\Users\\jstroem\\Zotero\\storage\\QZA5S72Z\\abstract.html}
+  author = {Verginelli, Iason and Yao, Yijun and Suuberg, Eric M.}
 }
 
 @article{guo_identification_2015,
@@ -236,9 +200,7 @@
   journaltitle = {Environ. Sci. Technol.},
   date = {2015-11-17},
   pages = {13472-13482},
-  keywords = {Vapor intrusion,Assessment methods,Controlled pressure method,Hill AFB,Preferential pathway},
-  author = {Guo, Yuanming and Holton, Chase and Luo, Hong and Dahlen, Paul and Gorder, Kyle and Dettenmaier, Erik and Johnson, Paul C.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\2RT7TGXZ\\figures7.tar;C:\\Users\\jstroem\\Zotero\\storage\\ATQB2QCW\\Guo et al. - 2015 - Identification of Alternative Vapor Intrusion Path.pdf;C:\\Users\\jstroem\\Zotero\\storage\\ATQQYTIB\\figures5.tar;C:\\Users\\jstroem\\Zotero\\storage\\BA8MYGDH\\es5b03564_si_001.pdf;C:\\Users\\jstroem\\Zotero\\storage\\IJWFEVCQ\\figures3.tar;C:\\Users\\jstroem\\Zotero\\storage\\NM6ZSVVS\\figure3.tar;C:\\Users\\jstroem\\Zotero\\storage\\PMWDVNXI\\figures4.tar;C:\\Users\\jstroem\\Zotero\\storage\\UEDG32SS\\figures6.tar;C:\\Users\\jstroem\\Zotero\\storage\\KNHXS8YZ\\acs.est.html}
+  author = {Guo, Yuanming and Holton, Chase and Luo, Hong and Dahlen, Paul and Gorder, Kyle and Dettenmaier, Erik and Johnson, Paul C.}
 }
 
 @article{holton_long-term_2015,
@@ -251,9 +213,7 @@
   journaltitle = {Environ. Sci. Technol.},
   date = {2015-02-17},
   pages = {2091-2098},
-  keywords = {Vapor intrusion,Controlled pressure method,Hill AFB},
-  author = {Holton, Chase and Guo, Yuanming and Luo, Hong and Dahlen, Paul and Gorder, Kyle and Dettenmaier, Erik and Johnson, Paul C.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\625DWAQB\\figure3.tar;C:\\Users\\jstroem\\Zotero\\storage\\FPIZJ2RD\\figure2.tar;C:\\Users\\jstroem\\Zotero\\storage\\G7KCLTQT\\Holton et al. - 2015 - Long-Term Evaluation of the Controlled Pressure Me.pdf;C:\\Users\\jstroem\\Zotero\\storage\\UTU3PYPS\\Holton et al. - 2015 - Long-Term Evaluation of the Controlled Pressure Method for Assessment of the Vapor Intrusion Pathway.pdf;C:\\Users\\jstroem\\Zotero\\storage\\XKUC6M6P\\figure4.tar;C:\\Users\\jstroem\\Zotero\\storage\\56XV3G9L\\es5052342.html}
+  author = {Holton, Chase and Guo, Yuanming and Luo, Hong and Dahlen, Paul and Gorder, Kyle and Dettenmaier, Erik and Johnson, Paul C.}
 }
 
 @article{johnston_spatiotemporal_2014,
@@ -268,9 +228,7 @@
   journaltitle = {J. Expo. Sci. Environ. Epidemiol.},
   date = {2014-11},
   pages = {564},
-  keywords = {Vapor intrusion,Spatial variability,Temporal variability},
-  author = {Johnston, Jill E. and Gibson, Jacqueline MacDonald},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\B567UTLE\\Johnston and Gibson - 2014 - Spatiotemporal variability of tetrachloroethylene .pdf;C:\\Users\\jstroem\\Zotero\\storage\\4S3BKH96\\jes201313.html}
+  author = {Johnston, Jill E. and Gibson, Jacqueline MacDonald}
 }
 
 @article{holton_temporal_2013,
@@ -283,9 +241,7 @@
   journaltitle = {Environ. Sci. Technol.},
   date = {2013-12-03},
   pages = {13347-13354},
-  keywords = {Vapor intrusion,Hill AFB,Temporal variability},
-  author = {Holton, Chase and Luo, Hong and Dahlen, Paul and Gorder, Kyle and Dettenmaier, Erik and Johnson, Paul C.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\BNPM42SX\\figure2.tar;C:\\Users\\jstroem\\Zotero\\storage\\D28XWQ6U\\figure4.tar;C:\\Users\\jstroem\\Zotero\\storage\\HS3BP65A\\figure3.tar;C:\\Users\\jstroem\\Zotero\\storage\\PE2ICW43\\Holton et al. - 2013 - Temporal Variability of Indoor Air Concentrations .pdf;C:\\Users\\jstroem\\Zotero\\storage\\ZKBXVEHI\\es4024767.html}
+  author = {Holton, Chase and Luo, Hong and Dahlen, Paul and Gorder, Kyle and Dettenmaier, Erik and Johnson, Paul C.}
 }
 
 @article{shen_influence_2013,
@@ -299,9 +255,7 @@
   journaltitle = {Environ. Eng. Sci.},
   date = {2013-10-01},
   pages = {628-637},
-  keywords = {Vapor intrusion,VOC,Model,van Genuchten,Vapor intrusion factors,Risk assessment,Soil moisture,Capillary fringe,Soil contaminant concentration,Three-dimensional},
-  author = {Shen, Rui and Pennell, Kelly G. and Suuberg, Eric M.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\J8P4EQE9\\Shen, Pennell, Suuberg - 2013 - Influence of Soil Moisture on Soil Gas Vapor Concentration for Vapor Intrusion.pdf;C:\\Users\\jstroem\\Zotero\\storage\\L2BWE46Y\\ees.2013.0133.pdf}
+  author = {Shen, Rui and Pennell, Kelly G. and Suuberg, Eric M.}
 }
 
 @article{pennell_sewer_2013,
@@ -316,9 +270,7 @@
   journaltitle = {Groundwater Monit R},
   date = {2013-08-01},
   pages = {119-126},
-  keywords = {Vapor intrusion,Assessment methods,Preferential pathway,Sewer},
-  author = {Pennell, Kelly G. and Scammell, Madeleine Kangsen and McClean, Michael D. and Ames, Jennifer and Weldon, Brittany and Friguglietti, Leigh and Suuberg, Eric M. and Shen, Rui and Indeglia, Paul A. and Heiger-Bernays, Wendy J.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\CPQ54DH6\\Pennell et al. - 2013 - Sewer Gas An Indoor Air Source of PCE to Consider During Vapor Intrusion Investigations.pdf;C:\\Users\\jstroem\\Zotero\\storage\\Q6T7LC4U\\Pennell et al. - 2013 - Sewer Gas An Indoor Air Source of PCE to Consider.pdf;C:\\Users\\jstroem\\Zotero\\storage\\LJFPFX9V\\abstract.html}
+  author = {Pennell, Kelly G. and Scammell, Madeleine Kangsen and McClean, Michael D. and Ames, Jennifer and Weldon, Brittany and Friguglietti, Leigh and Suuberg, Eric M. and Shen, Rui and Indeglia, Paul A. and Heiger-Bernays, Wendy J.}
 }
 
 @article{mchugh_evaluation_2012,
@@ -331,9 +283,7 @@
   journaltitle = {Environ. Sci. Technol.},
   date = {2012-05},
   pages = {4792--4799},
-  keywords = {Vapor intrusion,VOC,Assessment methods,Controlled pressure method,Hill AFB,TCE},
-  author = {McHugh, Thomas E. and Beckley, Lila and Bailey, Danielle and Gorder, Kyle and Dettenmaier, Erik and Rivera-Duarte, Ignacio and Brock, Samuel and MacGregor, Ian C.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\CQ8DCHF7\\McHugh et al. - 2012 - Evaluation of Vapor Intrusion Using Controlled Building Pressure.pdf}
+  author = {McHugh, Thomas E. and Beckley, Lila and Bailey, Danielle and Gorder, Kyle and Dettenmaier, Erik and Rivera-Duarte, Ignacio and Brock, Samuel and MacGregor, Ian C.}
 }
 
 @article{nielsen_remediation_2017,
@@ -347,9 +297,7 @@
   journaltitle = {Remediat. J.},
   date = {2017-06-07},
   pages = {67-73},
-  keywords = {Vapor intrusion,Controlled pressure method,Preferential pathway,Sewer,Remediation,Sampling methods,Sewer systems},
-  author = {Nielsen, Karin Birn and Hvidberg, Boerge},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\KS72RYNZ\\Nielsen and Hvidberg - Remediation techniques for mitigating vapor intrus.pdf;C:\\Users\\jstroem\\Zotero\\storage\\LJNP7FNN\\Nielsen, Hvidberg - 2017 - Remediation techniques for mitigating vapor intrusion from sewer systems to indoor air.pdf;C:\\Users\\jstroem\\Zotero\\storage\\9S4CH3ZA\\rem.html}
+  author = {Nielsen, Karin Birn and Hvidberg, Boerge}
 }
 
 @article{brenner_results_2010,
@@ -362,9 +310,7 @@
   journaltitle = {J. Air Waste Manag. Assoc.},
   date = {2010-06-01},
   pages = {747-758},
-  keywords = {Vapor intrusion,To read,NASA Ames},
-  author = {Brenner, David},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\SZ5FSU8Q\\Brenner - 2010 - Results of a Long-Term Study of Vapor Intrusion at.pdf;C:\\Users\\jstroem\\Zotero\\storage\\ICWCNUH6\\1047-3289.60.6.html}
+  author = {Brenner, David}
 }
 
 @article{folkes_observed_2009,
@@ -378,9 +324,7 @@
   journaltitle = {Ground Water Monit. Remediat.},
   date = {2009-01-01},
   pages = {70-80},
-  keywords = {Vapor intrusion,Spatial variability,Temporal variability,To read,Colorado,New York},
-  author = {Folkes, David and Wertz, William and Kurtz, Jeffrey and Kuehster, Theodore},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\E9ISYP5J\\Folkes et al. - 2009 - Observed Spatial and Temporal Distributions of CVOCs at Colorado and New York Vapor Intrusion Sites.pdf;C:\\Users\\jstroem\\Zotero\\storage\\JGXGAX3T\\Folkes et al. - 2009 - Observed Spatial and Temporal Distributions of CVO.pdf;C:\\Users\\jstroem\\Zotero\\storage\\CTN5K7GF\\abstract.html}
+  author = {Folkes, David and Wertz, William and Kurtz, Jeffrey and Kuehster, Theodore}
 }
 
 @article{millington_permeability_1961,
@@ -404,9 +348,7 @@
   journaltitle = {Can. J. Civ. Eng.},
   date = {2012-06},
   pages = {654--666},
-  keywords = {van Genuchten,van Genuchten parameters},
-  author = {Dan, Han-Cheng and Xin, Pei and Li, Ling and Li, Liang and Lockington, David},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\RCRLTVC8\\Dan et al. - 2012 - Capillary effect on flow in the drainage layer of highway pavement.pdf}
+  author = {Dan, Han-Cheng and Xin, Pei and Li, Ling and Li, Liang and Lockington, David}
 }
 
 @article{van_genuchten_closed-form_1980,
@@ -417,10 +359,8 @@
   journaltitle = {Soil Sci. Soc. Am.},
   date = {1980},
   pages = {892--898},
-  keywords = {van Genuchten,Soil moisture,Soil-water diffusivity,Soil-water retention curve},
   author = {van Genuchten, M. Th.},
-  options = {useprefix=true},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\U953Z4PK\\van Genuchten - 1980 - A Closed-form Equation for Predicting the Hydraulic Conductivity of Unsaturated Soils.pdf}
+  options = {useprefix=true}
 }
 
 @article{gorder_portable_2011,
@@ -434,9 +374,7 @@
   journaltitle = {Groundw. Monit. Remediat.},
   date = {2011-08-16},
   pages = {113-119},
-  keywords = {Vapor intrusion,Hill AFB,Data,Indoor sources,Portable GC/MS},
-  author = {Gorder, Kyle A. and Dettenmaier, Erik M.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\D56UL2FQ\\Gorder and Dettenmaier - Portable GCMS Methods to Evaluate Sources of cVOC.pdf;C:\\Users\\jstroem\\Zotero\\storage\\I4279FJY\\j.1745-6592.2011.01357.html}
+  author = {Gorder, Kyle A. and Dettenmaier, Erik M.}
 }
 
 @article{mchugh_recent_2017,
@@ -449,9 +387,7 @@
   series = {Global {{Trends}} in the {{Environmental Remediation Industry}}},
   date = {2017-12-15},
   pages = {783-792},
-  keywords = {Vapor intrusion,Assessment methods,Controlled pressure method,Model,Preferential pathway,Conceptual model,Guidance,Investigation method,Tracer gas},
-  author = {McHugh, Thomas and Loll, Per and Eklund, Bart},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\S6ZMXKLT\\McHugh, Loll, Eklund - 2017 - Recent advances in vapor intrusion site investigations.pdf;C:\\Users\\jstroem\\Zotero\\storage\\CXRGVPES\\S0301479717301196.html;C:\\Users\\jstroem\\Zotero\\storage\\QHFF328B\\S0301479717301196.html}
+  author = {McHugh, Thomas and Loll, Per and Eklund, Bart}
 }
 
 @article{parker_real-world_2017,
@@ -464,9 +400,7 @@
   journaltitle = {Quarterly Journal of Engineering Geology and Hydrogeology},
   date = {2017-08-01},
   pages = {318-332},
-  keywords = {Vapor intrusion,Preferential pathway,Model validity,Uncertainty},
-  author = {Parker, Tom and White, Hannah and Taylor, Gareth and Evans, Frank and Pearce, Matthew},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\FRWMHEMZ\\Parker et al. - 2017 - Real-world uncertainties during a site assessment .pdf;C:\\Users\\jstroem\\Zotero\\storage\\KQS554LT\\real-world-uncertainties-during-a-site-assessment.html}
+  author = {Parker, Tom and White, Hannah and Taylor, Gareth and Evans, Frank and Pearce, Matthew}
 }
 
 @article{derycke_environmental_2018,
@@ -479,9 +413,7 @@
   journaltitle = {Science of The Total Environment},
   date = {2018-06-01},
   pages = {754-761},
-  keywords = {Vapor intrusion,Vapor intrusion factors,Soil gas,Statistical analysis,Sensitivity analysis,Building age,Environmental assessment,French national campaign,Multivariate analysis,Statistical model,Volatile compounds},
-  author = {Derycke, Virginie and Coftier, Aline and Zornig, Clément and Léprond, Hubert and Scamps, Mathilde and Gilbert, Dominique},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\6DRNFYYE\\Derycke et al. - 2018 - Environmental assessments on schools located on or.pdf;C:\\Users\\jstroem\\Zotero\\storage\\22WGBI2A\\S0048969718301384.html}
+  author = {Derycke, Virginie and Coftier, Aline and Zornig, Clément and Léprond, Hubert and Scamps, Mathilde and Gilbert, Dominique}
 }
 
 @article{roghani_occurrence_2018,
@@ -494,9 +426,7 @@
   journaltitle = {Science of The Total Environment},
   date = {2018-03-01},
   pages = {1149-1162},
-  keywords = {Vapor intrusion,Spatial variability,Temporal variability,Preferential pathway,Sewer,Sampling methods,Sewer systems,Trichloroethylene},
-  author = {Roghani, Mohammadyousef and Jacobs, Olivia P. and Miller, Anthony and Willett, Evan J. and Jacobs, James A. and Viteri, C. Ricardo and Shirazi, Elham and Pennell, Kelly G.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\HD77KLVB\\Roghani et al. - 2018 - Occurrence of chlorinated volatile organic compoun.pdf;C:\\Users\\jstroem\\Zotero\\storage\\FJSQREUV\\S0048969717329236.html}
+  author = {Roghani, Mohammadyousef and Jacobs, Olivia P. and Miller, Anthony and Willett, Evan J. and Jacobs, James A. and Viteri, C. Ricardo and Shirazi, Elham and Pennell, Kelly G.}
 }
 
 @article{altman_introduction_1992,
@@ -509,9 +439,7 @@
   journaltitle = {Am. Stat.},
   date = {1992-08-01},
   pages = {175-185},
-  keywords = {Confidence intervals,Local linear regression,Model building,Model checking,Smoothing},
-  author = {Altman, N. S.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\TVHIQSR7\\00031305.1992.html}
+  author = {Altman, N. S.}
 }
 
 @article{nazaroff_radon_1985,
@@ -524,9 +452,7 @@
   journaltitle = {Atmospheric Environment (1967)},
   date = {1985-01-01},
   pages = {31-46},
-  keywords = {To read,air-exchange,building materials,fireplace,indoor air quality,infiltration,mradon,pollution sources,residential buildings,soil},
-  author = {Nazaroff, W. W. and Feustel, H. and Nero, A. V. and Revzan, K. L. and Grimsrud, D. T. and Essling, M. A. and Toohey, R. E.},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\3SVA4V6J\\1-s2.0-0004698185901349-main.pdf;C:\\Users\\jstroem\\Zotero\\storage\\9M67WQNB\\Nazaroff et al. - 1985 - Radon transport into a detached one-story house wi.pdf;C:\\Users\\jstroem\\Zotero\\storage\\CYWDBW74\\0004698185901349.html;C:\\Users\\jstroem\\Zotero\\storage\\GXPD5N7L\\0004698185901349.html}
+  author = {Nazaroff, W. W. and Feustel, H. and Nero, A. V. and Revzan, K. L. and Grimsrud, D. T. and Essling, M. A. and Toohey, R. E.}
 }
 
 @report{u.s._epa_exposure_2011,
@@ -535,6 +461,13 @@
   institution = {{U.S. Environmental Protection Agency}},
   date = {2011},
   pages = {1436},
-  author = {{U.S. EPA}},
-  file = {C:\\Users\\jstroem\\Zotero\\storage\\VPLRUCGS\\Bussard - 2011 - Exposure Factors Handbook.PDF}
+  author = {{U.S. EPA}}
 }
+
+@software{jones_scipy_2011,
+  title = {{{SciPy}}: {{Open}} Source Scientific Tools for {{Python}}},
+  date = {2011/},
+  author = {Jones, Eric and Travis Oliphant and {Pearu Peterson}}
+}
+
+
